# projektpraktikum-i

./: .gitignore  .latexindent.yaml  README.md  derivative_approximation.py  flake.nix  pyproject.toml
.github/workflows/: build.yaml  check.yaml
docs/: conf.py  index.rst
overrides/: pyproject.nix
src/projektpraktikum_i/: derivative_approximation.py  utils.py
src/projektpraktikum_i/derivative_approximation/: __init__.py  experiments.py  finite_difference.py  scenes.py
src/projektpraktikum_i/discretization/: block_matrix_2d.py  experiments_it.py  experiments_lu.py  linear_solvers.py  poisson_problem_2d.py
tests/: test_derivative_approximation.py
tests/derivative_approximation/: test_finite_difference.py
tests/discretization/: test_block_matrix_2d.py  test_poisson_problem_2d.py
tex/derivative_approximation/: Handout.tex  handout.bib
tex/discretization/: common.tex  handout.tex  poisson_handout.tex  presentation.bib  presentation.tex  report.bib  report.tex
tex/discretization/figures/: generate.sh
tex/successive_over_relaxation/: Bericht.bib  Bericht.tex
