[project]
name = "projektpraktikum-i"
version = "0.1.0"
description = "Praxisübung NLA - Projektpraktikum I - WiSe24/25"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "manim>=0.18.1",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
]

[project.scripts]
derivative-approximation = "projektpraktikum_i.derivative_approximation.finite_difference:main"
derivative-approximation-experiments = "projektpraktikum_i.derivative_approximation.experiments:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.uv]
dev-dependencies = [
    "pylint>=3.3.1",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
