[project]
name = "projektpraktikum-i"
version = "0.1.0"
description = "Praxisübung NLA - Projektpraktikum I - WiSe24/25"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "joblib>=1.4.2",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "scipy>=1.14.1",
]

[project.scripts]
derivative-approximation = "projektpraktikum_i.derivative_approximation.finite_difference:main"
derivative-approximation-experiments = "projektpraktikum_i.derivative_approximation.experiments:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "pylint>=3.3.1",
    "ruff>=0.7.1",
	{include-group = "test"},
	{include-group = "manim"},
]

test = [
  "pytest-cov>=6.0.0",
  "pytest>=8.3.3",
]

manim = [
	"manim>=0.18.1",
]
