[project]
name = "projektpraktikum-i"
version = "0.1.0"
description = "Praxisübung NLA - Projektpraktikum I - WiSe24/25"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "dill>=0.3.9",
    "joblib>=1.4.2",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "scipy>=1.14.1",
]

[project.scripts]
derivative-approximation-experiments = "projektpraktikum_i.derivative_approximation.experiments:cli"
discretization-experiements = "projektpraktikum_i.discretization.experiments_lu:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "pylint>=3.3.1",
    "ruff>=0.7.1",
    {include-group = "docs"},
    {include-group = "test"},
]
test = [
  "pytest-cov>=6.0.0",
  "pytest>=8.3.3",
]
docs = [
    "myst-parser>=4.0.0",
    "sphinx>=8.1.3",
]
